--- a/Wiki Backend/package.json
+++ b/Wiki Backend/package.json
@@ -8,12 +8,14 @@
         "seed": "node seed.js"
     },
     "dependencies": {
+        "@scalar/express-api-reference": "^0.8.20",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "mongoose": "^6.0.0",
         "socket.io": "^4.8.1",
-        "socket.io-client": "^4.8.1"
+        "socket.io-client": "^4.8.1",
+        "swagger-jsdoc": "^6.2.8"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
