--- a/Wiki-Backend/.env
+++ b/Wiki-Backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb://127.0.0.1:27017/wiki_demo
+MONGO_URI=mongodb+srv://Vercel-Admin-wiki:pg9hh5IYNqvLc8vd@wiki.vgltmri.mongodb.net/?retryWrites=true&w=majority/test
