--- a/Wiki-Backend/package.json
+++ b/Wiki-Backend/package.json
@@ -16,7 +16,8 @@
         "mongoose": "^6.0.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
-        "swagger-jsdoc": "^6.2.8"
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui": "^5.29.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
