--- a/Wiki-Backend/.env
+++ b/Wiki-Backend/.env
@@ -1,2 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb+srv://Vercel-Admin-wiki:pg9hh5IYNqvLc8vd@wiki.vgltmri.mongodb.net/?retryWrites=true&w=majority/test
+# MONGO_URI=mongodb+srv://Vercel-Admin-wiki:pg9hh5IYNqvLc8vd@wiki.vgltmri.mongodb.net/?retryWrites=true&w=majority/test
+# MONGO_URI=mongodb+srv://bjcuberdeveloper:KICKFURY@wiki-cluster.xskhrxm.mongodb.net/wiki-demo
+MONGO_URI=mongodb://localhost:27017/wiki_demo
