--- a/Wiki-Backend/package.json
+++ b/Wiki-Backend/package.json
@@ -6,13 +6,14 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "seed": "node seed.js"
+        "seed": "node seed_with_comments.js"
     },
     "dependencies": {
         "@scalar/express-api-reference": "^0.8.20",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
+        "framer-motion": "^12.23.24",
         "mongoose": "^6.0.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
