--- a/wiki-frontend/package.json
+++ b/wiki-frontend/package.json
@@ -23,8 +23,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/elements": "^2.7.0",
     "@react-navigation/native": "^7.1.8",
+    "@react-navigation/stack": "^7.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "54.0.13",
@@ -57,6 +58,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-navigation": "^5.0.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
