--- a/wiki-frontend/app.json
+++ b/wiki-frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "wiki-frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon.jpg",
     "scheme": "wikifrontend",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
